--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -101,11 +101,18 @@ jobs:
       matrix:
         include:
           - artifact-suffix: macOS-x64
-            s3-os-name: osx
+            s3-os-name: osx-x64
             s3-artifact-suffx: ''
             s3-artifact-extension: 'dmg'
             artifact-extension: '.dmg' # for download-artifacts action, for non-zip only, should include `.`
             s3-create-latest-link: true # create link to pointing to the "latest" build; activate only one per branch per s3-os-name  
+        
+          - artifact-suffix: macOS-arm64
+            s3-os-name: osx-arm
+            s3-artifact-suffx: ''
+            s3-artifact-extension: 'dmg'
+            artifact-extension: '.dmg'
+            s3-create-latest-link: true
 
           - artifact-suffix: win64
             s3-os-name: win64
