--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -102,21 +102,24 @@ jobs:
         include:
           - artifact-suffix: macOS-x64
             s3-os-name: macos-x64
-            s3-artifact-suffx: 'macos-x64'
+            s3-artifact-prefix: '-macOS-x64'
+            s3-artifact-suffix: ''
             s3-artifact-extension: 'dmg'
             artifact-extension: '.dmg' # for download-artifacts action, for non-zip only, should include `.`
             s3-create-latest-link: true # create link to pointing to the "latest" build; activate only one per branch per s3-os-name  
         
           - artifact-suffix: macOS-arm64
             s3-os-name: macos-arm64
-            s3-artifact-suffx: 'macos-arm64'
+            s3-artifact-prefix: '-macOS-arm64'
+            s3-artifact-suffix: ''
             s3-artifact-extension: 'dmg'
             artifact-extension: '.dmg'
             s3-create-latest-link: true
 
           - artifact-suffix: win64
             s3-os-name: win64
-            s3-artifact-suffx: 'win64'
+            s3-artifact-prefix: '-win64'
+            s3-artifact-suffix: ''
             s3-artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build
 
@@ -130,7 +133,7 @@ jobs:
       UPLOAD_TO_S3: ${{ (secrets.S3_ACCESS_KEY_ID != 0) && !startsWith(github.ref, 'refs/tags/') }}
       S3_CREATE_LATEST_LINK: ${{ matrix.s3-create-latest-link && (secrets.S3_ACCESS_KEY_ID != 0) && startsWith(github.ref, 'refs/heads/') }}
       S3_ARTIFACT_PATH: ${{ github.workspace }}/build/s3-upload
-      S3_ARTIFACT_NAME: SC-${{ github.sha }}${{ matrix.s3-artifact-suffx }}.${{ matrix.s3-artifact-extension }}
+      S3_ARTIFACT_NAME: SC${{ matrix.s3-artifact-prefix }}-${{ github.sha }}${{ matrix.s3-artifact-suffix }}.${{ matrix.s3-artifact-extension }}
       S3_BUILD_LOCATION: builds/supercollider/supercollider/${{ matrix.s3-os-name }}
       S3_ROOT_URL: 'https://supercollider.s3.amazonaws.com'
     steps:
