--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,8 @@ __pycache__
 .cache/*
 
 # vs code files
-.vscode
+.vscode/*
+!.vscode/tasks.json
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/c_cpp_properties.json
