--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - job-name: "32-bit"
+          - job-name: "32-bit with ctest"
             fftw-arch: "x86"
             cmake-arch: "Win32"
             os-version: "2019"
@@ -26,11 +26,12 @@ jobs:
             use-qtwebengine: "ON" # might need to be turned off for MinGW
             qt-modules: "qtwebengine"
             ctest: true
+            ctest-cmd: "RUN_TESTS"
             # artifact-suffix: "win32" # set if needed - will trigger artifact upload
             # create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             # installer-suffix: "win32-installer"
 
-          - job-name: "64-bit MSVC 2022"
+          - job-name: "64-bit MSVC 2022 with ctest"
             fftw-arch: "x64"
             cmake-arch: "x64"
             os-version: "2022"
@@ -46,6 +47,7 @@ jobs:
             artifact-suffix: "win64" # set if needed - will trigger artifact upload
             create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             installer-suffix: "win64-installer"
+            ctest-cmd: "RUN_TESTS"
 
           - job-name: "64-bit MSVC 2019"
             fftw-arch: "x64"
@@ -60,8 +62,9 @@ jobs:
             use-qtwebengine: "ON" # might need to be turned off for MinGW
             qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning'
             ctest: false
+            ctest-cmd: "RUN_TESTS"
 
-          - job-name: "64-bit MinGW"
+          - job-name: "64-bit MinGW with ctest"
             fftw-arch: "x64"
             os-version: "2022"
             qt-version: "6.7.0"
@@ -73,6 +76,7 @@ jobs:
             qt-modules: "qtpositioning"
             artifact-suffix: "win64-mingw" # set if needed - will trigger artifact upload
             ctest: true
+            ctest-cmd: "test"
 
     name: Windows ${{ matrix.job-name }}
     env:
@@ -208,5 +212,6 @@ jobs:
 
       - name: Run CTests
         if: matrix.ctest
-        shell: bash
-        run: cmake --build $BUILD_PATH --config Release --target test
+        working-directory: ${{ env.BUILD_PATH }}
+        shell: cmd
+        run: cmake --build . --config Release --target ${{ matrix.ctest-cmd }}
