--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - job-name: "32-bit"
+          - job-name: "32-bit with ctest"
             fftw-arch: "x86"
             cmake-arch: "Win32"
             os-version: "2019"
@@ -25,11 +25,13 @@ jobs:
             vcpkg-triplet: x86-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
             qt-modules: "qtwebengine"
+            ctest: true
+            ctest-cmd: "RUN_TESTS"
             # artifact-suffix: "win32" # set if needed - will trigger artifact upload
             # create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             # installer-suffix: "win32-installer"
 
-          - job-name: "64-bit MSVC 2022"
+          - job-name: "64-bit MSVC 2022 with ctest"
             fftw-arch: "x64"
             cmake-arch: "x64"
             os-version: "2022"
@@ -41,9 +43,11 @@ jobs:
             vcpkg-triplet: x64-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
             qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning'
+            ctest: true
             artifact-suffix: "win64" # set if needed - will trigger artifact upload
             create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             installer-suffix: "win64-installer"
+            ctest-cmd: "RUN_TESTS"
 
           - job-name: "64-bit MSVC 2019"
             fftw-arch: "x64"
@@ -57,8 +61,10 @@ jobs:
             vcpkg-triplet: x64-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
             qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning'
+            ctest: false
+            ctest-cmd: "RUN_TESTS"
 
-          - job-name: "64-bit MinGW"
+          - job-name: "64-bit MinGW with ctest"
             fftw-arch: "x64"
             os-version: "2022"
             qt-version: "6.7.0"
@@ -69,6 +75,8 @@ jobs:
             use-qtwebengine: "OFF" # might need to be turned off for MinGW
             qt-modules: "qtpositioning"
             artifact-suffix: "win64-mingw" # set if needed - will trigger artifact upload
+            ctest: true
+            ctest-cmd: "test"
 
     name: Windows ${{ matrix.job-name }}
     env:
@@ -197,3 +205,14 @@ jobs:
         with:
           name: ${{ env.INSTALLER_FILE }}
           path: ${{ env.INSTALL_PATH }}/*.exe
+
+      - name: Configure CTests
+        if: matrix.ctest
+        run: cd ${{ github.workspace }}
+
+      - name: Run CTests
+        continue-on-error: true
+        if: matrix.ctest
+        working-directory: ${{ env.BUILD_PATH }}
+        shell: cmd
+        run: cmake --build . --config Release --target ${{ matrix.ctest-cmd }}
